--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Qianlong\\Mongodb\\": "src/"
+      "Qianlong\\SnowFlake\\": "src/"
     },
     "files": []
   },
